syntax = "proto3";


option go_package = "rpcdpb";

service UserService {
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {
    }
    rpc Login (LoginRequest) returns (LoginResponse) {
    }
    rpc Validate (ValidateRequest) returns (ValidateResponse) {
    }
}

message CreateUserRequest {
    string username = 1;
    string password = 2;
}

message CreateUserResponse {
    User user = 1;
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
}

message ValidateRequest {
    string token = 1;
}

message ValidateResponse {
    User user = 1;
}

message User {
    string username = 1;
}